@@ -4,10 +4,7 @@
  */
 package launcher.pedidos;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 
@@ -17,17 +14,24 @@ import java.util.jar.Manifest;
  */
 public class LauncherPedidos {
 
-    /**
-     * @param args the command line arguments
-     */
-    /*public static void main(String[] args) {
+    public static void main(String[] args) {
         try {
+            String destinationDir = "app";
             String appJar = "app/NotaPedidos.jar";
             String javafxPath = "C:\\javafx-sdk-22.0.1\\lib";
 
-            String destinationDir = "app";
+            String installedVersion = null;
+            boolean jarExists = new java.io.File(appJar).exists();
 
-            if (GitHubUpdater.isUpdateAvailable()) {
+            if (jarExists) {
+                installedVersion = getJarManifestVersion(appJar);
+            }
+
+            String latestVersion = GitHubUpdater.fetchLatestVersion();
+
+            boolean shouldUpdate = !jarExists || GitHubUpdater.isNewerVersion(installedVersion, latestVersion);
+
+            if (shouldUpdate) {
                 System.out.println("Actualización disponible. Descargando nueva versión...");
                 Downloader.downloadAndUnzip(GitHubUpdater.getLatestDownloadUrl(), destinationDir);
                 System.out.println("Actualización completada.");
@@ -48,59 +52,7 @@ public class LauncherPedidos {
         } catch (Exception e) {
             e.printStackTrace();
         }
-    }*/
-    public static void main(String[] args) {
-        try {
-            String appJar = "app/NotaPedidos.jar";
-            String javafxPath = "C:\\javafx-sdk-22.0.1\\lib";
-
-            String installedVersion = null;
-            boolean jarExists = new java.io.File(appJar).exists();
-
-            if (jarExists) {
-                installedVersion = getJarManifestVersion(appJar);
-            }
-
-            String latestVersion = GitHubUpdater.fetchLatestVersion();
-
-            boolean shouldUpdate = !jarExists || isNewerVersion(installedVersion, latestVersion);
-
-            if (shouldUpdate) {
-                System.out.println("Actualización disponible. Descargando nueva versión...");
-                Downloader.download(GitHubUpdater.getLatestDownloadUrl(), appJar);
-                System.out.println("Actualización completada.");
-            } else {
-                System.out.println("La aplicación está actualizada.");
-            }
-
-            System.out.println("Ejecutando aplicación...");
-            ProcessBuilder pb = new ProcessBuilder(
-                    "java",
-                    "--module-path", javafxPath,
-                    "--add-modules", "javafx.controls,javafx.fxml",
-                    "-jar", appJar
-            );
-            pb.inheritIO();
-            pb.start();
-
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
     }
-
-    /*public static String getInstalledJarVersion(String jarPath) {
-        try (java.util.jar.JarFile jarFile = new java.util.jar.JarFile(jarPath)) {
-            java.util.jar.JarEntry entry = jarFile.getJarEntry("version.txt");
-            if (entry != null) {
-                try (InputStream in = jarFile.getInputStream(entry); BufferedReader reader = new BufferedReader(new InputStreamReader(in))) {
-                    return reader.readLine().trim();
-                }
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null; // No se pudo leer la versión
-    }*/
 
     public static String getJarManifestVersion(String jarPath) {
         try (JarFile jarFile = new JarFile(jarPath)) {
@@ -112,29 +64,5 @@ public class LauncherPedidos {
             e.printStackTrace();
         }
         return null;
-    }
-
-    public static boolean isNewerVersion(String currentVersion, String latestVersion) {
-        if (currentVersion == null) {
-            return true;
-        }
-
-        String[] currentParts = currentVersion.split("\\.");
-        String[] latestParts = latestVersion.split("\\.");
-
-        int length = Math.max(currentParts.length, latestParts.length);
-
-        for (int i = 0; i < length; i++) {
-            int currentPart = i < currentParts.length ? Integer.parseInt(currentParts[i]) : 0;
-            int latestPart = i < latestParts.length ? Integer.parseInt(latestParts[i]) : 0;
-
-            if (latestPart > currentPart) {
-                return true;
-            }
-            if (latestPart < currentPart) {
-                return false;
-            }
-        }
-        return false;
     }
 }
